@@ -43,6 +43,18 @@ Stop the currently running agent. Use this inside `at_exit` in your
 <<getting-started-rack,Rack app>> to gracefully shut down.
 
 [float]
+[[api-agent-restart]]
+==== `ElasticAPM.restart`
+
+If the agent is already running, this method will stop and start the agent.
+
+If the agent is not already running, this method will start the agent.
+
+A config can be passed to the method that will be used to start the agent. If the agent
+is already running and no config is passed to the `#restart` method, the running agent's
+config will be used.
+
+[float]
 [[api-agent-running]]
 ==== `ElasticAPM.running?`
 
